<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="CONTACTS">My Contacts</string>
    <string name="MAP">Map</string>
    <string name="TEXT_MYTOPICS">Topics Found</string>
    <string name="_CLEARMESSAGE">All your message were removed</string>
    <string name="_CONTATOS">contatos</string>
    <string name="_FRIENDADD">Your friend was added successfully</string>
    <string name="_PERFIS">perfis</string>
    <string name="_POSICAO">posicao</string>
    <string name="_SENDMESSAGE">Your message was sent successfully</string>
    <string name="_UPDATEDDATA">Data updated successfully</string>
    <string name="_USUARIOS">usuarios</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_in">Sign in (FireBase only)</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="addFriend">Add Friend</string>
    <string name="app_about">LoveParty - BETA @2018 - Cicari group all rights reserved</string>
    <string name="app_name">LoveParty</string>
    <string name="app_name_description">Enjoy with your family and friends, share your thoughts and life!</string>
    <string name="app_welcome">Welcome</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="backToLogin">Back to Login</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="btnAddFriend">Add new friend</string>
    <string name="btnBuilding">Building</string>
    <string name="btnFilter">Filter</string>
    <string name="btnForgotPassword">Forgot your password?</string>
    <string name="btnMover">Resync position on GPS</string>
    <string name="btnRemoveFriend">Remove friend(s)</string>
    <string name="btnSatelitte">Satellite</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_ok">Ok</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm_action">Confirm action</string>
    <string name="createAccount">CREATE ACCOUNT?</string>
    <string name="default_web_client_id">723187526100-96urjtbeuk5rnjh596e8q6kvi0p1k27k.apps.googleusercontent.com</string>
    <string name="edDisplayName">Nickname</string>
    <string name="edDisplayNameSample">Nickname to describe you to other people.</string>
    <string name="edEmail">Email</string>
    <string name="edFilter">what are you looking for?</string>
    <string name="edQuote">Hashtags</string>
    <string name="edQuoteSample">Tags to help other people search things in common with you.</string>
    <string name="emBranco"></string>
    <string name="email">Email</string>
    <string name="emptyEmailAndPassword">Please fill email and password.</string>
    <string name="enterMessage">Enter Message...</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="explain_route">Click and hold on map to create an route</string>
    <string name="firebase_database_url">https://gaveta-ae710.firebaseio.com</string>
    <string name="gcm_defaultSenderId">723187526100</string>
    <string name="google_api_key">AIzaSyCa_DI-MqCOAAAmrVXSFa3vqvyzQEK7jto</string>
    <string name="google_app_id">1:723187526100:android:8bc73a5ce2ecc46c</string>
    <string name="google_crash_reporting_api_key">AIzaSyCa_DI-MqCOAAAmrVXSFa3vqvyzQEK7jto</string>
    <string name="google_maps_key">AIzaSyCr_n1dQHMkqpjo9h-wuOj03KFRmoeLKV4</string>
    <string name="google_storage_bucket">gaveta-ae710.appspot.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="isVisible">Visible on map?</string>
    <string name="loginfirebase">Login</string>
    <string name="myAccount">My Account</string>
    <string name="name">Name</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="newuser">New user?</string>
    <string name="newuserSample">For new users, fill username and password fields and click in the button above.</string>
    <string name="nomap_error">Erro: mapa nao encontrado</string>
    <string name="or">or</string>
    <string name="password">Password</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email\n        completions.</string>
    <string name="project_id">gaveta-ae710</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="search_menu_title">Search</string>
    <string name="signup">SIGN UP</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="title_activity_basic">BasicActivity</string>
    <string name="title_activity_login">LoveParty - Sign in</string>
    <string name="title_create_new_account">LoveParty - Create Account</string>
    <string name="tvActionRange">Action range:</string>
    <string name="tvMap">Texto de exemplo</string>
    <string name="tvMeusTopicos">My topics</string>
    <string name="tvMoveCharacter">Click and hold on map to create route:</string>
    <string name="tvTopicosEncontrados">Topics found</string>
    <string name="txClearMessage">Clear messages</string>
    <string name="txEmailSent">Email sent successfully.</string>
    <string name="txForgotPassword">Please fill your email, click on the button and follow \n the instructions sent by the system on your inbox.</string>
    <string name="txSend">Send</string>
    <string name="updateData">Update</string>
    <string name="userNotFound">User not found.</string>
    <string name="user_mail">paulo@simon.com</string>
    <string name="user_password">teste123</string>
</resources>
