<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res-auto" app:orientation="vertical" app:padding="10dp" app:layout_width="match_parent" app:layout_height="match_parent">
    <ProgressBar app:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/progressbar" app:layout_width="UNKNOWN_DATA_0x3201" app:layout_height="UNKNOWN_DATA_0x3201" app:indeterminate="true" style="?unknown_attr_ref: 1010077" />
    <EditText app:id="@+id/edName" app:layout_width="match_parent" app:layout_height="wrap_content" app:hint="@string/name" app:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone|time" />
    <EditText app:id="@+id/edEmail" app:layout_width="match_parent" app:layout_height="wrap_content" app:hint="@string/email" app:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone|time" />
    <EditText app:id="@+id/edPassword" app:layout_width="match_parent" app:layout_height="wrap_content" app:hint="@string/password" app:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone" />
    <Button app:id="@+id/btnSignUp" app:layout_width="match_parent" app:layout_height="wrap_content" app:text="@string/signup" />
    <TextView app:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:layout_width="match_parent" app:layout_height="wrap_content" app:text="or" />
    <Button app:id="@+id/btnBackToLogin" app:layout_width="match_parent" app:layout_height="wrap_content" app:text="@string/backToLogin" />
    <TextView app:id="@+id/tvRetornoUsuario" app:layout_width="match_parent" app:layout_height="wrap_content" />
</LinearLayout>
