<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res-auto" app:layout_width="match_parent" app:layout_height="match_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <android.support.design.widget.FloatingActionButton app:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/fab" app:layout_width="wrap_content" app:layout_height="wrap_content" app:layout_margin="@dimen/fab_margin" app:layout_marginTop="8dp" app:layout_marginBottom="8dp" app:layout_marginStart="8dp" app:layout_marginEnd="8dp" app:backgroundTint="@color/colorAccent" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.975" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="1.0" app:srcCompat="0x108004e" />
    <android.support.design.widget.TextInputLayout app:id="@+id/textInputLayout2" app:layout_width="UNKNOWN_DATA_0x14801" app:layout_height="UNKNOWN_DATA_0x3401" app:layout_marginTop="120dp" app:layout_marginStart="8dp" app:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0">
        <AutoCompleteTextView app:textSize="15sp" app:id="@+id/edEmailFriend" app:layout_width="match_parent" app:layout_height="match_parent" app:hint="@string/edEmail" app:maxLines="1" app:singleLine="true" app:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone|time" />
    </android.support.design.widget.TextInputLayout>
    <TextView app:textSize="18sp" app:textColor="@color/common_google_signin_btn_text_dark_default" app:id="@+id/textView8" app:layout_width="UNKNOWN_DATA_0x18501" app:layout_height="wrap_content" app:layout_marginTop="64dp" app:text="@string/addFriend" app:textAlignment="center" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" />
</android.support.constraint.ConstraintLayout>
